// -*- Protocol-Buffers -*-
//==============================================================================
/// @file datetime.proto
/// @brief ProtoBuf message types for calendar/clock types
/// @author Tor Slettnes <tor@slett.net>
//==============================================================================

syntax = "proto3";

package cc.datetime;

message TimeStruct
{
    uint32 year = 1;            // Year.
    uint32 month = 2;           // Month within year, 1-12
    uint32 day = 3;             // Day within month, 1-31
    uint32 hour = 4;            // Hour within day, 0-23
    uint32 minute = 5;          // Minute within hour, 0-59
    uint32 second = 6;          // Second within minute, 0-61 (normally 0-59)
    Weekday weekday = 7;        // Enumerated day
    uint32 year_day = 8;        // Day within year, 1-366
    oneof dst
    {
        bool is_dst = 9;   // Whether daylight savings time is in use
    }
}

message Interval
{
    TimeUnit unit = 1;
    int64 count = 2;
}

enum TimeUnit
{
    ZERO_TIME = 0;              // No/Unspecified time
    NANOSECOND = 1;             // 1e-9 second
    MICROSECOND = 2;            // 1e-6 second
    MILLISECOND = 3;            // 1e-3 second
    SECOND = 4;                 // SI time unit
    MINUTE = 5;                 // 60 seconds
    HOUR = 6;                   // 60 minutes
    DAY = 7;                    // 24 hours, approx 1 Earth rotation towards Sun
    WEEK = 8;                   // 7 days
    MONTH = 9;                  // 28-31 days (variable)
    YEAR = 10;                  // 12 months (variable)
    ETERNITY = 11;              // Inifinite time
}

enum Weekday
{
    SUNDAY    = 0;              // Sun's day
    MONDAY    = 1;              // Moon's day
    TUESDAY   = 2;              // TÃ½r's day
    WEDNESDAY = 3;              // Odin's day
    THURSDAY  = 4;              // Thor's day
    FRIDAY    = 5;              // Frey's day
    SATURDAY  = 6;              // Saturn's day
}

